// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/components/svgs/emojis Test Suite Happy Test Suite matches snapshot 1`] = `
<svg
  className=""
  height={32}
  viewBox="0 0 64 64"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="32"
    cy="32"
    fill="#ffdd67"
    r="30"
  />
  <g
    fill="#664e27"
  >
    <circle
      cx="20.5"
      cy="24.6"
      r="5"
    />
    <circle
      cx="43.5"
      cy="24.6"
      r="5"
    />
    <path
      d="m48.1 37c-4.3 6.1-9.5 7.6-16.1 7.6s-11.8-1.5-16.1-7.6c-.6-.8-2.2-.3-1.8.9 2.3 8 10 12.7 18 12.7s15.7-4.7 18-12.7c.2-1.2-1.4-1.7-2-.9"
    />
  </g>
</svg>
`;

exports[`@/components/svgs/emojis Test Suite Sad Test Suite matches snapshot 1`] = `
<svg
  className=""
  height={32}
  viewBox="0 0 64 64"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="32"
    cy="32"
    fill="#ffdd67"
    r="30"
  />
  <g
    fill="#664e27"
  >
    <circle
      cx="20.5"
      cy="24.6"
      r="5"
    />
    <circle
      cx="43.5"
      cy="24.6"
      r="5"
    />
    <path
      d="m19.4 45.8c8.1-5.7 17.1-5.6 25.2 0 1 .7 1.8-.5 1.2-1.6-2.5-4-7.4-7.7-13.8-7.7s-11.3 3.6-13.8 7.7c-.6 1.1.2 2.3 1.2 1.6"
    />
  </g>
</svg>
`;
